--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Bé gái suýt mù vĩnh viễn do đục thủy tinh thể bẩm sinh",
+    "content": "Bé gái 10 tuổi bị đục thủy tinh thể bẩm sinh tại vùng núi cao đã suýt mù vĩnh viễn do thị lực chỉ còn 2/10. Nhờ sự phát hiện và hỗ trợ phẫu thuật miễn phí từ các bác sĩ trong một chương trình khám bệnh thiện nguyện, bé đã được phẫu thuật thay thủy tinh thể nhân tạo và phục hồi thị lực lên 8/10. Bác sĩ khuyến cáo rằng việc phát hiện và điều trị kịp thời rất quan trọng để bảo vệ thị lực cho trẻ em mắc bệnh này.",
+    "link": "https://vnexpress.net/be-gai-suyt-mu-vinh-vien-do-duc-thuy-tinh-the-bam-sinh-4866274.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bé gái bao nhiêu tuổi đã được phẫu thuật do đục thủy tinh thể bẩm sinh?",
+    "answers": [
+      {
+        "text": "10 tuổi",
+        "correct": true
+      },
+      {
+        "text": "8 tuổi",
+        "correct": false
+      },
+      {
+        "text": "12 tuổi",
+        "correct": false
+      },
+      {
+        "text": "6 tuổi",
+        "correct": false
+      },
+      {
+        "text": "9 tuổi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thần đồng Philippines thắng sốc tay vợt số hai thế giới",
     "content": "Tay vợt trẻ 19 tuổi Alexandra Eala đã gây bất ngờ lớn khi đánh bại hạt giống số hai thế giới Iga Swiatek với tỷ số 6-2, 7-5 tại Miami, tiến vào bán kết giải WTA 1000. Eala trở thành tay vợt Philippines đầu tiên vào bán kết cấp độ này và sẽ gia nhập top 100 thế giới. Trong trận đấu, Eala đã thể hiện bản lĩnh và kỹ năng vượt trội, đặc biệt là cú thuận tay mạnh mẽ của mình, giúp cô vượt qua những thời điểm khó khăn để giành chiến thắng.",
     "link": "https://vnexpress.net/than-dong-philippines-thang-soc-tay-vot-so-hai-the-gioi-4866440.html",
@@ -1036,32 +1067,28 @@
     ]
   },
   {
-    "title": "Tin tức sáng 27-3: TP.HCM đổi nơi cấp phù hiệu xe kinh doanh vận tải; Kho bạc chào mua 1,2 tỉ USD",
-    "content": "Tin tức sáng 27-3 cho biết TP.HCM sẽ thay đổi địa điểm cấp phù hiệu cho xe kinh doanh vận tải, bắt đầu từ ngày 1-4 tới. Địa điểm mới sẽ là bộ phận một cửa của Sở Giao thông công chánh tại số 63 Lý Tự Trọng, quận 1. Ngoài ra, Kho bạc Nhà nước cũng thông báo chào mua 1,2 tỉ USD từ các ngân hàng thương mại trong 6 đợt chào mua gần đây, nhằm điều chỉnh tỉ giá USD/VND.",
-    "link": "https://tuoitre.vn/tin-tuc-sang-27-3-tp-hcm-doi-noi-cap-phu-hieu-xe-kinh-doanh-van-tai-kho-bac-chao-mua-1-2-ti-usd-20250326203936361.htm",
-    "cat": "kinh-doanh",
-    "positivity": 7,
-    "importance": 8,
-    "question": "TP.HCM sẽ đổi địa điểm cấp phù hiệu xe kinh doanh vận tải ở đâu?",
+    "title": "Yamaha YZF-R9 lần đầu ra mắt thị trường Đông Nam Á",
+    "content": "Yamaha YZF-R9, mẫu sportbike 900 phân khối, đã lần đầu tiên ra mắt tại triển lãm Bangkok Motor Show 2025 ở Thái Lan. Xe được trang bị động cơ 3 xi-lanh 890 phân khối, công suất 106 mã lực và nhiều công nghệ hiện đại như bộ điều khiển điện tử YRC và hệ thống hỗ trợ sang số nhanh. Mặc dù chưa có thông tin về giá bán, Yamaha đã giới thiệu R9 với nhiều tính năng nổi bật, hứa hẹn sẽ thu hút sự chú ý của người yêu thích xe máy trong khu vực Đông Nam Á.",
+    "link": "https://vnexpress.net/yamaha-yzf-r9-lan-dau-ra-mat-thi-truong-dong-nam-a-4865989.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Yamaha YZF-R9 được giới thiệu ở đâu và vào thời gian nào?",
     "answers": [
       {
-        "text": "Bộ phận một cửa của Sở Giao thông công chánh tại số 63 Lý Tự Trọng, quận 1",
+        "text": "Triển lãm Bangkok Motor Show 2025",
         "correct": true
       },
       {
-        "text": "Trụ sở của Kho bạc Nhà nước",
+        "text": "Triển lãm Tokyo Motor Show 2025",
         "correct": false
       },
       {
-        "text": "Sân bay Long Thành",
+        "text": "Triển lãm xe máy Milan 2025",
         "correct": false
       },
       {
-        "text": "Bộ Giao thông Vận tải",
-        "correct": false
-      },
-      {
-        "text": "UBND TP.HCM",
+        "text": "Triển lãm xe hơi Frankfurt 2025",
         "correct": false
       }
     ]
@@ -1098,55 +1125,32 @@
     ]
   },
   {
-    "title": "Tình yêu của cô gái Nhật và chàng nông dân Việt",
-    "content": "Câu chuyện tình yêu giữa Miwa, một cô gái Nhật Bản 30 tuổi và Quang Huy, chàng nông dân 29 tuổi ở Lâm Đồng, bắt đầu từ chuyến đi trải nghiệm nông trại. Miwa đã không chỉ thu hoạch cà phê mà còn học hỏi về văn hóa và cuộc sống của người nông dân Việt Nam. Tình cảm giữa họ phát triển qua những lần Miwa trở lại Việt Nam, giúp Huy trong công việc và cùng nhau thực hiện ước mơ khởi nghiệp với quán cà phê sạch. Họ đã vượt qua nhiều khó khăn và khoảng cách để xây dựng một mối quan hệ bền vững.",
-    "link": "https://vnexpress.net/tinh-yeu-cua-co-gai-nhat-va-chang-nong-dan-viet-4862674.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Tình yêu giữa Miwa và Quang Huy bắt đầu từ đâu?",
+    "title": "Tin tức sáng 27-3: TP.HCM đổi nơi cấp phù hiệu xe kinh doanh vận tải; Kho bạc chào mua 1,2 tỉ USD",
+    "content": "Tin tức sáng 27-3 cho biết TP.HCM sẽ thay đổi địa điểm cấp phù hiệu cho xe kinh doanh vận tải, bắt đầu từ ngày 1-4 tới. Địa điểm mới sẽ là bộ phận một cửa của Sở Giao thông công chánh tại số 63 Lý Tự Trọng, quận 1. Ngoài ra, Kho bạc Nhà nước cũng thông báo chào mua 1,2 tỉ USD từ các ngân hàng thương mại trong 6 đợt chào mua gần đây, nhằm điều chỉnh tỉ giá USD/VND.",
+    "link": "https://tuoitre.vn/tin-tuc-sang-27-3-tp-hcm-doi-noi-cap-phu-hieu-xe-kinh-doanh-van-tai-kho-bac-chao-mua-1-2-ti-usd-20250326203936361.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "TP.HCM sẽ đổi địa điểm cấp phù hiệu xe kinh doanh vận tải ở đâu?",
     "answers": [
       {
-        "text": "Chuyến đi trải nghiệm nông trại",
+        "text": "Bộ phận một cửa của Sở Giao thông công chánh tại số 63 Lý Tự Trọng, quận 1",
         "correct": true
       },
       {
-        "text": "Một cuộc thi cà phê",
+        "text": "Trụ sở của Kho bạc Nhà nước",
         "correct": false
       },
       {
-        "text": "Một chương trình văn hóa",
+        "text": "Sân bay Long Thành",
         "correct": false
       },
       {
-        "text": "Một cuộc gặp gỡ tình cờ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Yamaha YZF-R9 lần đầu ra mắt thị trường Đông Nam Á",
-    "content": "Yamaha YZF-R9, mẫu sportbike 900 phân khối, đã lần đầu tiên ra mắt tại triển lãm Bangkok Motor Show 2025 ở Thái Lan. Xe được trang bị động cơ 3 xi-lanh 890 phân khối, công suất 106 mã lực và nhiều công nghệ hiện đại như bộ điều khiển điện tử YRC và hệ thống hỗ trợ sang số nhanh. Mặc dù chưa có thông tin về giá bán, Yamaha đã giới thiệu R9 với nhiều tính năng nổi bật, hứa hẹn sẽ thu hút sự chú ý của người yêu thích xe máy trong khu vực Đông Nam Á.",
-    "link": "https://vnexpress.net/yamaha-yzf-r9-lan-dau-ra-mat-thi-truong-dong-nam-a-4865989.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Yamaha YZF-R9 được giới thiệu ở đâu và vào thời gian nào?",
-    "answers": [
-      {
-        "text": "Triển lãm Bangkok Motor Show 2025",
-        "correct": true
-      },
-      {
-        "text": "Triển lãm Tokyo Motor Show 2025",
+        "text": "Bộ Giao thông Vận tải",
         "correct": false
       },
       {
-        "text": "Triển lãm xe máy Milan 2025",
-        "correct": false
-      },
-      {
-        "text": "Triển lãm xe hơi Frankfurt 2025",
+        "text": "UBND TP.HCM",
         "correct": false
       }
     ]
@@ -1209,6 +1213,33 @@
       },
       {
         "text": "Vì muốn thăm người thân.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tình yêu của cô gái Nhật và chàng nông dân Việt",
+    "content": "Câu chuyện tình yêu giữa Miwa, một cô gái Nhật Bản 30 tuổi và Quang Huy, chàng nông dân 29 tuổi ở Lâm Đồng, bắt đầu từ chuyến đi trải nghiệm nông trại. Miwa đã không chỉ thu hoạch cà phê mà còn học hỏi về văn hóa và cuộc sống của người nông dân Việt Nam. Tình cảm giữa họ phát triển qua những lần Miwa trở lại Việt Nam, giúp Huy trong công việc và cùng nhau thực hiện ước mơ khởi nghiệp với quán cà phê sạch. Họ đã vượt qua nhiều khó khăn và khoảng cách để xây dựng một mối quan hệ bền vững.",
+    "link": "https://vnexpress.net/tinh-yeu-cua-co-gai-nhat-va-chang-nong-dan-viet-4862674.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Tình yêu giữa Miwa và Quang Huy bắt đầu từ đâu?",
+    "answers": [
+      {
+        "text": "Chuyến đi trải nghiệm nông trại",
+        "correct": true
+      },
+      {
+        "text": "Một cuộc thi cà phê",
+        "correct": false
+      },
+      {
+        "text": "Một chương trình văn hóa",
+        "correct": false
+      },
+      {
+        "text": "Một cuộc gặp gỡ tình cờ",
         "correct": false
       }
     ]
@@ -1890,6 +1921,33 @@
     ]
   },
   {
+    "title": "FPT đẩy mạnh đầu tư giáo dục tại Huế",
+    "content": "FPT vừa tổ chức lễ cất nóc cho tổ hợp giáo dục tại Huế, đánh dấu một bước tiến quan trọng trong việc phát triển giáo dục tại khu vực miền Trung - Tây Nguyên. Dự án này sẽ phục vụ cho 20.000 học sinh, bao gồm các bậc học từ tiểu học đến giáo dục nghề nghiệp. FPT cam kết nâng cao chất lượng giáo dục và phát triển nguồn nhân lực số, đồng thời góp phần thúc đẩy sự phát triển kinh tế xã hội của địa phương.",
+    "link": "https://dantri.com.vn/giao-duc/fpt-day-manh-dau-tu-giao-duc-tai-hue-20250326171903168.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "FPT vừa đầu tư tổ hợp giáo dục nào tại Huế?",
+    "answers": [
+      {
+        "text": "Tổ hợp giáo dục FPT",
+        "correct": true
+      },
+      {
+        "text": "Tổ hợp văn hóa",
+        "correct": false
+      },
+      {
+        "text": "Trường đại học quốc tế",
+        "correct": false
+      },
+      {
+        "text": "Trường tiểu học tư thục",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Khi chạy bộ trở thành liệu pháp 'chữa lành'",
     "content": "Chạy bộ đã trở thành một liệu pháp tinh thần hữu ích cho những ai cần tìm lại sự cân bằng trong cuộc sống. Nhiều người không còn xem chạy bộ là một cuộc đua mà là hành trình tự đối thoại và kết nối với bản thân và cộng đồng. Nghiên cứu chỉ ra rằng chạy bộ kích thích sản sinh các hormone tích cực, giúp cải thiện tâm trạng và cảm giác gắn kết. Tuy nhiên, các chuyên gia cũng lưu ý rằng chạy bộ không phải là phương thuốc cho mọi vấn đề tâm lý mà chỉ là một phần trong lối sống lành mạnh.",
     "link": "https://vnexpress.net/khi-chay-bo-tro-thanh-lieu-phap-chua-lanh-4865058.html",
@@ -1916,33 +1974,6 @@
       },
       {
         "text": "Không có tác dụng gì đối với sức khỏe tâm thần",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "FPT đẩy mạnh đầu tư giáo dục tại Huế",
-    "content": "FPT vừa tổ chức lễ cất nóc cho tổ hợp giáo dục tại Huế, đánh dấu một bước tiến quan trọng trong việc phát triển giáo dục tại khu vực miền Trung - Tây Nguyên. Dự án này sẽ phục vụ cho 20.000 học sinh, bao gồm các bậc học từ tiểu học đến giáo dục nghề nghiệp. FPT cam kết nâng cao chất lượng giáo dục và phát triển nguồn nhân lực số, đồng thời góp phần thúc đẩy sự phát triển kinh tế xã hội của địa phương.",
-    "link": "https://dantri.com.vn/giao-duc/fpt-day-manh-dau-tu-giao-duc-tai-hue-20250326171903168.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "FPT vừa đầu tư tổ hợp giáo dục nào tại Huế?",
-    "answers": [
-      {
-        "text": "Tổ hợp giáo dục FPT",
-        "correct": true
-      },
-      {
-        "text": "Tổ hợp văn hóa",
-        "correct": false
-      },
-      {
-        "text": "Trường đại học quốc tế",
-        "correct": false
-      },
-      {
-        "text": "Trường tiểu học tư thục",
         "correct": false
       }
     ]
@@ -2234,33 +2265,6 @@
     ]
   },
   {
-    "title": "Melo: 'Với một chân, Neymar vẫn là cầu thủ hay nhất Brazil'",
-    "content": "Felipe Melo, cựu tiền vệ Brazil, bày tỏ sự ủng hộ mạnh mẽ đối với Neymar sau thất bại 1-4 của Brazil trước Argentina trong vòng loại World Cup 2026. Melo khẳng định rằng Neymar, dù chỉ có một chân, vẫn là cầu thủ xuất sắc nhất Brazil và cần sớm trở lại đội tuyển. Ông chỉ trích sự thiếu quyết tâm và tinh thần chiến đấu của đội tuyển Brazil, nhấn mạnh rằng họ cần phải đoàn kết và chiến đấu vì nhau.",
-    "link": "https://vnexpress.net/melo-voi-mot-chan-neymar-van-la-cau-thu-hay-nhat-brazil-4866176.html",
-    "cat": "the-thao",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Melo nghĩ gì về khả năng của Neymar sau trận thua của Brazil trước Argentina?",
-    "answers": [
-      {
-        "text": "Neymar vẫn là cầu thủ hay nhất Brazil.",
-        "correct": true
-      },
-      {
-        "text": "Neymar không cần thiết cho đội tuyển.",
-        "correct": false
-      },
-      {
-        "text": "Melo không quan tâm đến Neymar.",
-        "correct": false
-      },
-      {
-        "text": "Brazil không cần thay đổi gì.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "8 thói quen mỗi ngày giúp đi ngủ sớm",
     "content": "Bài viết trình bày 8 thói quen giúp mọi người đi ngủ sớm hơn, bao gồm việc duy trì lịch trình ngủ, tránh caffeine và giảm thời gian sử dụng điện thoại trước khi ngủ. Ngủ đủ giấc từ 7-9 giờ mỗi đêm rất quan trọng cho sức khỏe tổng thể, góp phần giảm căng thẳng và cải thiện tâm trạng. Ngoài ra, các mẹo như thư giãn trước khi ngủ, tránh ăn nhiều và không tập thể dục muộn cũng được đề cập để hỗ trợ thói quen ngủ sớm.",
     "link": "https://vnexpress.net/8-thoi-quen-moi-ngay-giup-di-ngu-som-4866098.html",
@@ -2283,6 +2287,33 @@
       },
       {
         "text": "Không cần thư giãn trước khi ngủ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Melo: 'Với một chân, Neymar vẫn là cầu thủ hay nhất Brazil'",
+    "content": "Felipe Melo, cựu tiền vệ Brazil, bày tỏ sự ủng hộ mạnh mẽ đối với Neymar sau thất bại 1-4 của Brazil trước Argentina trong vòng loại World Cup 2026. Melo khẳng định rằng Neymar, dù chỉ có một chân, vẫn là cầu thủ xuất sắc nhất Brazil và cần sớm trở lại đội tuyển. Ông chỉ trích sự thiếu quyết tâm và tinh thần chiến đấu của đội tuyển Brazil, nhấn mạnh rằng họ cần phải đoàn kết và chiến đấu vì nhau.",
+    "link": "https://vnexpress.net/melo-voi-mot-chan-neymar-van-la-cau-thu-hay-nhat-brazil-4866176.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Melo nghĩ gì về khả năng của Neymar sau trận thua của Brazil trước Argentina?",
+    "answers": [
+      {
+        "text": "Neymar vẫn là cầu thủ hay nhất Brazil.",
+        "correct": true
+      },
+      {
+        "text": "Neymar không cần thiết cho đội tuyển.",
+        "correct": false
+      },
+      {
+        "text": "Melo không quan tâm đến Neymar.",
+        "correct": false
+      },
+      {
+        "text": "Brazil không cần thay đổi gì.",
         "correct": false
       }
     ]
